--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.5.9",
     "morgan": "~1.9.1"
   }
 }
