--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.19",
     "morgan": "~1.9.1"
   }
 }
